tests/ui/tool-attributes/tool-attributes-shadowing.stderr
error[E0659]: `rustfmt` is ambiguous
  --> $DIR/tool-attributes-shadowing.rs:3:3
   |
LL | #[rustfmt::skip]
   |   ^^^^^^^ ambiguous name
   |
   = note: ambiguous because of a name conflict with a tool attribute
   = note: `rustfmt` could refer to a tool module
note: `rustfmt` could also refer to the module defined here
  --> $DIR/tool-attributes-shadowing.rs:1:1
   |
LL | mod rustfmt {}
   | ^^^^^^^^^^^^^^
   = help: use `crate::rustfmt` to refer to this module unambiguously

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0659`.
