tests/ui/tool-attributes/tool-attributes-shadowing.rs
mod rustfmt {}

#[rustfmt::skip] //~ ERROR: ambiguous
fn main() {}
